# jane-pdf-renamer

./: .gitignore  README.md  project.md  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  gui.py  main.py  watcher.py  web.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
config/: default.yaml
core/: __init__.py  extractor.py  parser.py  renamer.py
tests/: __init__.py  test_pdf_processing.py
