[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jane-pdf-renamer"
version = "1.0.0"
description = "Medical office PDF renaming tool for Jane app exports"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.10.0",
    "PySide6>=6.6.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*"]

